53: Test Emscripten on Windows and Linux

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -18,8 +18,8 @@ jobs:
         setup:
           - os: macos-latest
             preset: xcode
-          #          - os: windows-latest
-          #            preset: vs2022
+          - os: windows-latest
+            preset: vs2022
           #
           #          - os: macos-latest
           #            preset: ninja
@@ -30,19 +30,12 @@ jobs:
           #
           - os: macos-latest
             preset: emscripten
-    #          - os: windows-latest
-    #            preset: emscripten
-    #          - os: ubuntu-latest
-    #            preset: emscripten
+          - os: windows-latest
+            preset: emscripten
+          - os: ubuntu-latest
+            preset: emscripten
 
     steps:
-      #- name: Set up ACTIONS_CACHE_URL and ACTIONS_RUNTIME_TOKEN for caching
-      #  uses: actions/github-script@v7
-      #  with:
-      #    script: |
-      #      core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
-      #      core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
-
       - name: Checkout repository
         uses: actions/checkout@v4
 
