--- a/loaders/loaders_cgltf/CMakeLists.txt
+++ b/loaders/loaders_cgltf/CMakeLists.txt
@@ -11,15 +11,14 @@ target_link_libraries(loaders_cgltf SDL2::SDL2main)
 target_link_libraries(loaders_cgltf glm::glm)
 target_include_directories(loaders_cgltf PRIVATE ${CGLTF_INCLUDE_DIRS})
 
-if(NOT DEFINED EMSCRIPTEN)
+if(NOT EMSCRIPTEN)
   target_link_libraries(loaders_cgltf glad::glad)
 endif()
 
-if(DEFINED EMSCRIPTEN)
-  target_compile_options(loaders_cgltf PRIVATE ${EMSCRIPTEN_COMPILE_OPTIONS})
-  target_link_options(loaders_cgltf PRIVATE ${EMSCRIPTEN_LINK_OPTIONS})
-  target_link_options(loaders_cgltf PRIVATE "-sASSERTIONS=1"
-                      "-sALLOW_MEMORY_GROWTH=1")
+if(EMSCRIPTEN)
+  target_compile_options(loaders_cgltf PRIVATE ${PRESET_COMPILE_OPTIONS})
+  target_link_options(loaders_cgltf PRIVATE ${PRESET_LINK_OPTIONS})
+  target_link_options(loaders_cgltf PRIVATE "-sALLOW_MEMORY_GROWTH=1")
 endif()
 
 add_target_resources(TARGET loaders_cgltf RESOURCES data)
