--- a/wolf/CMakeLists.txt
+++ b/wolf/CMakeLists.txt
@@ -2,7 +2,9 @@ set(SOLUTION_FOLDER wolf)
 set(DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
 
 add_subdirectory(wolf_common)
-add_subdirectory(wolf_multithread)
+if(NOT EMSCRIPTEN_PTHREAD_DISABLED)
+  add_subdirectory(wolf_multithread)
+endif()
 add_subdirectory(wolf_singlethread)
 add_subdirectory(wolf_sprite_voxelizer)
 add_subdirectory(wolf_vswap_file_viewer)
