50: Refactor resource handling in CMake and source files for consistency across projects

--- a/ai/ai_pong/CMakeLists.txt
+++ b/ai/ai_pong/CMakeLists.txt
@@ -16,7 +16,7 @@ if(EMSCRIPTEN)
   target_link_options(ai_pong PRIVATE ${PRESET_LINK_OPTIONS})
 endif()
 
-add_target_resources(TARGET ai_pong RESOURCES data)
+add_target_resources(ai_pong RESOURCES data)
 
 set_target_properties(
   ai_pong PROPERTIES FOLDER ${SOLUTION_FOLDER} VS_DEBUGGER_WORKING_DIRECTORY
