--- a/loaders/loaders_cgltf/CMakeLists.txt
+++ b/loaders/loaders_cgltf/CMakeLists.txt
@@ -21,9 +21,8 @@ if(EMSCRIPTEN)
   target_link_options(loaders_cgltf PRIVATE "-sALLOW_MEMORY_GROWTH=1")
 endif()
 
-add_target_resources(TARGET loaders_cgltf RESOURCES data)
-
-add_target_resources(TARGET loaders_cgltf RESOURCES shaders COPY_IF_DIFFERENT)
+add_target_resources(loaders_cgltf RESOURCES data)
+add_target_resources(loaders_cgltf RESOURCES shaders COPY_IF_DIFFERENT)
 
 set_target_properties(
   loaders_cgltf
