--- a/wolf/wolf_multithread/CMakeLists.txt
+++ b/wolf/wolf_multithread/CMakeLists.txt
@@ -14,16 +14,9 @@ if(EMSCRIPTEN)
   target_compile_options(wolf_multithread PRIVATE ${PRESET_COMPILE_OPTIONS})
   target_link_options(wolf_multithread PRIVATE ${PRESET_LINK_OPTIONS})
   target_link_options(wolf_multithread PRIVATE "-sPTHREAD_POOL_SIZE=8")
-
-  target_link_options(wolf_multithread PRIVATE
-                      "SHELL:--preload-file ${DATA_DIR}@/data")
-else()
-  add_custom_command(
-    TARGET wolf_multithread
-    PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory ${DATA_DIR}
-            $<TARGET_FILE_DIR:wolf_multithread>/data)
 endif()
+
+add_target_resources(wolf_multithread RESOURCES ${DATA_DIR} DESTINATIONS data)
 
 set_target_properties(
   wolf_multithread
