--- a/wolf/wolf_sprite_voxelizer/CMakeLists.txt
+++ b/wolf/wolf_sprite_voxelizer/CMakeLists.txt
@@ -11,34 +11,20 @@ target_link_libraries(wolf_sprite_voxelizer SDL2::SDL2)
 target_link_libraries(wolf_sprite_voxelizer SDL2::SDL2main)
 target_link_libraries(wolf_sprite_voxelizer glm::glm)
 
-if(NOT DEFINED EMSCRIPTEN)
+if(NOT EMSCRIPTEN)
   target_link_libraries(wolf_sprite_voxelizer glad::glad)
 endif()
 
-if(DEFINED EMSCRIPTEN)
+if(EMSCRIPTEN)
   target_compile_options(wolf_sprite_voxelizer
-                         PRIVATE ${EMSCRIPTEN_COMPILE_OPTIONS})
-  target_link_options(wolf_sprite_voxelizer PRIVATE ${EMSCRIPTEN_LINK_OPTIONS})
-
-  target_link_options(
-    wolf_sprite_voxelizer PRIVATE "-sASSERTIONS=1" "-sALLOW_MEMORY_GROWTH=1"
-    "SHELL:--preload-file ${DATA_DIR}@/data"
-    "SHELL:--preload-file ${CMAKE_CURRENT_SOURCE_DIR}/shaders@/shaders")
-else()
-  add_custom_command(
-    TARGET wolf_sprite_voxelizer
-    PRE_BUILD
-    COMMAND
-      ${CMAKE_COMMAND} -E copy_directory_if_different
-      ${CMAKE_CURRENT_SOURCE_DIR}/shaders
-      $<TARGET_FILE_DIR:wolf_sprite_voxelizer>/shaders)
-
-  add_custom_command(
-    TARGET wolf_sprite_voxelizer
-    PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory ${DATA_DIR}
-            $<TARGET_FILE_DIR:wolf_sprite_voxelizer>/data)
+                         PRIVATE ${PRESET_COMPILE_OPTIONS})
+  target_link_options(wolf_sprite_voxelizer PRIVATE ${PRESET_LINK_OPTIONS})
+  target_link_options(wolf_sprite_voxelizer PRIVATE "-sALLOW_MEMORY_GROWTH=1")
 endif()
+
+add_target_resources(wolf_sprite_voxelizer RESOURCES ${DATA_DIR} DESTINATIONS
+                     data)
+add_target_resources(wolf_sprite_voxelizer RESOURCES shaders COPY_IF_DIFFERENT)
 
 set_target_properties(
   wolf_sprite_voxelizer
