--- a/streaming/streaming_receiver/CMakeLists.txt
+++ b/streaming/streaming_receiver/CMakeLists.txt
@@ -7,19 +7,14 @@ target_compile_features(streaming_receiver PRIVATE cxx_std_23)
 target_link_libraries(streaming_receiver gp)
 target_link_libraries(streaming_receiver streaming_common)
 target_link_libraries(streaming_receiver Boost::program_options)
+target_link_libraries(streaming_receiver SDL2::SDL2)
+target_link_libraries(streaming_receiver SDL2::SDL2main)
 target_link_libraries(streaming_receiver LibDataChannel::LibDataChannel)
 target_link_libraries(streaming_receiver nlohmann_json::nlohmann_json)
 target_link_libraries(streaming_receiver glm::glm)
 target_link_libraries(streaming_receiver glad::glad)
-target_link_libraries(streaming_receiver glfw)
 
-add_custom_command(
-  TARGET streaming_receiver
-  PRE_BUILD
-  COMMAND
-    ${CMAKE_COMMAND} -E copy_directory_if_different
-    ${CMAKE_CURRENT_SOURCE_DIR}/shaders
-    $<TARGET_FILE_DIR:streaming_receiver>/shaders)
+add_target_resources(streaming_receiver RESOURCES shaders COPY_IF_DIFFERENT)
 
 set_target_properties(
   streaming_receiver
