--- a/streaming/streaming_streamer/CMakeLists.txt
+++ b/streaming/streaming_streamer/CMakeLists.txt
@@ -7,19 +7,14 @@ target_compile_features(streaming_streamer PRIVATE cxx_std_23)
 target_link_libraries(streaming_streamer gp)
 target_link_libraries(streaming_streamer streaming_common)
 target_link_libraries(streaming_streamer Boost::program_options)
+target_link_libraries(streaming_streamer SDL2::SDL2)
+target_link_libraries(streaming_streamer SDL2::SDL2main)
 target_link_libraries(streaming_streamer LibDataChannel::LibDataChannel)
 target_link_libraries(streaming_streamer nlohmann_json::nlohmann_json)
 target_link_libraries(streaming_streamer glm::glm)
 target_link_libraries(streaming_streamer glad::glad)
-target_link_libraries(streaming_streamer glfw)
 
-add_custom_command(
-  TARGET streaming_streamer
-  PRE_BUILD
-  COMMAND
-    ${CMAKE_COMMAND} -E copy_directory_if_different
-    ${CMAKE_CURRENT_SOURCE_DIR}/shaders
-    $<TARGET_FILE_DIR:streaming_streamer>/shaders)
+add_target_resources(streaming_streamer RESOURCES shaders COPY_IF_DIFFERENT)
 
 set_target_properties(
   streaming_streamer
