--- a/streaming/streaming_common/CMakeLists.txt
+++ b/streaming/streaming_common/CMakeLists.txt
@@ -7,10 +7,7 @@ target_compile_features(streaming_common PRIVATE cxx_std_23)
 target_include_directories(streaming_common
                            PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
-target_link_libraries(streaming_common gp)
-target_include_directories(streaming_common PRIVATE ${FFMPEG_INCLUDE_DIRS})
-target_link_directories(streaming_common PRIVATE ${FFMPEG_LIBRARY_DIRS})
-target_link_libraries(streaming_common ${FFMPEG_LIBRARIES})
+target_link_libraries(streaming_common PUBLIC gp)
 
 set_target_properties(streaming_common PROPERTIES FOLDER ${SOLUTION_FOLDER})
 
