--- a/wolf/CMakeLists.txt
+++ b/wolf/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(wolf_common)
 if(NOT EMSCRIPTEN_PTHREAD_DISABLED)
   add_subdirectory(wolf_multithread)
 endif()
+add_subdirectory(wolf_geometry_test)
 add_subdirectory(wolf_singlethread)
 add_subdirectory(wolf_sprite_voxelizer)
 add_subdirectory(wolf_vswap_file_viewer)
