68: Create a final Wolf target with fast ray collisions

--- a/wolf/CMakeLists.txt
+++ b/wolf/CMakeLists.txt
@@ -6,6 +6,7 @@ if(NOT EMSCRIPTEN_PTHREAD_DISABLED)
   add_subdirectory(wolf_multithread)
 endif()
 add_subdirectory(wolf_geometry_test)
+add_subdirectory(wolf_raycaster)
 add_subdirectory(wolf_singlethread)
 add_subdirectory(wolf_sprite_voxelizer)
 add_subdirectory(wolf_vswap_file_viewer)
